--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -30,7 +30,8 @@
     <div class="hero"></div>
 
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- All three classes within "content" were changed to "paragraphBody" in order to simplify css code, since they are all formatted the same -->
+        <div class="paragraphBody">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -38,7 +39,8 @@
             </p>
         </div>
 
-        <div id="online-reputation-management" class="online-reputation-management">
+        <!-- id is never called in the css so it was removed -->
+        <div class="paragraphBody">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -46,7 +48,8 @@
             </p>
         </div>
 
-        <div id="social-media-marketing" class="social-media-marketing">
+        <!-- id is never called in the css so it was removed -->
+        <div class="paragraphBody">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -78,12 +81,14 @@
             </p>
         </div>
     </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
 </body>
+
+<!-- Footer is now an element instead of a class. Footer is typically an element, not a class -->
+<footer>
+    <h2>Made with ❤️️ by Horiseon</h2>
+    <p>
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+    </p>
+</footer>
 
 </html>
