--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Develop/assets/css/style.css">
     <title>Marketing and Web Development</title>
 </head>
 
@@ -28,14 +28,14 @@
 
 <body>
     <!-- The image should not have been a background for a class but rather we should input an image as an element and then assign a class to the image if we wish to format in css  -->
-    <img src="./assets/images/digital-marketing-meeting.jpg" alt= "Digital Marketing Meeting" class="hero"/>
+    <img src="./Develop/assets/images/digital-marketing-meeting.jpg" alt= "Digital Marketing Meeting" class="hero"/>
 
     <div class="content">
         <!-- All three classes within "content" were changed to "paragraphBody" in order to simplify css code, since they are all formatted the same -->
 
         <!-- Search-engine-optimization id was added to the first paragraph to allow for quick access to this section on the web application -->
         <div id="search-engine-optimization" class="paragraphBody">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Optimization Notes" class="float-left" />
+            <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="Optimization Notes" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -43,7 +43,7 @@
         </div>
 
         <div id="online-reputation-management" class="paragraphBody">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Reputation Graph" class="float-right" />
+            <img src="./Develop/assets/images/online-reputation-management.jpg" alt="Reputation Graph" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -51,7 +51,7 @@
         </div>
 
         <div id="social-media-marketing" class="paragraphBody">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Table Meeting" class="float-left" />
+            <img src="./Develop/assets/images/social-media-marketing.jpg" alt="Social Media Table Meeting" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -63,21 +63,21 @@
         <!-- All the classes under "benefits" were streamlined to one class since they share the same format -->
         <div class="benefitComponent">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation Image" />
+            <img src="./Develop/assets/images/lead-generation.png" alt="Lead Generation Image" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefitComponent">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awarenes Lightbulb" />
+            <img src="./Develop/assets/images/brand-awareness.png" alt="Brand Awarenes Lightbulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefitComponent">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management Gear and Cash Image" />
+            <img src="./Develop/assets/images/cost-management.png" alt="Cost Management Gear and Cash Image" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
